syntax = "proto3";

package knowdateapp.user.v1.user;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/knowdateapp/knowdateapp/backend/user/internal/pb/api/v1/user";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  base_path: "/api/v1/"
};

service UserService {

  rpc CreateAnonymousUser(CreateAnonymousUserRequest) returns (CreateAnonymousUserResponse) {
    option (google.api.http) = {
      post: "/users/anonymous"
      body: "*"
    };
  }

}

message CreateAnonymousUserRequest {
  string username = 1;
}

message CreateAnonymousUserResponse {
  string id = 1;
  string username = 2;
  string created_at = 3;
}
